--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,4 +17,6 @@ dependencies = [
     "langchain-chroma>=0.2.5",
     "langchain-core>=0.3.74",
     "langchain-text-splitters>=0.3.9",
+    "seaborn>=0.13.2",
+    "scipy>=1.16.1",
 ]
